# problems

./: .gitignore  README.md  pyproject.toml
problems/: README.md  lonely_integer.py  pytest.ini  runner.py
problems/test/: test_lonely.py
