# https://poetry.eustace.io/docs/pyproject/
[tool.poetry]
name = "problems"
version = "0.1.1"
description = "examples problems done in several programming languages"
authors = ["Mike Carifio <mike@carif.io>"]
license = "MIT"
readme = "problems/README.md"
homepage = "https://www.github.com/mcarifio/problems"
include = "doc"
# exclude

[tool.poetry.dependencies]
python = "^3.7"
# cleo?
poetry = "^0.12.11"
prompt_toolkit = "^2.0"
fire = "^0.1.3"
pytest = "^4.1"
hypothesis = "^4.4"
distro = {version = "^1.3",platform = "Linux"}
attrdict = "^2.0"
Pycco = "^0.6.0"

[tool.poetry.dev-dependencies]
# poetry add --dev --allow-prereleases black
# https://black.readthedocs.io/en/stable/
black = {version = "^18.3-alpha.0",allows-prereleases = true}

# poetry add --dev pypiserver
# https://pypi.org/project/pypiserver/#quickstart-installation-and-usage
pypiserver = "^1.2"
passlib = "^1.7"

# poetry add --dev --optional xonsh
# https://xon.sh/index.html
xonsh = {version = "^0.8.9",optional = true}





[tool.poetry.scripts]
# See problems.runner for the dispatch function, which will select the right function based on
# it's name, e.g. `echo`. First two are for debugging and tests purposes

# All scripts will follow the pattern below for each "entry point"
echo = "problems.runner:echo"
# poetry run say say it now
# say just demonstrates a different entry point
say = "problems.runner:say"

test = "problems.runner:test"

# To use a local pypiserver, swithch the definition next and uncomment out [tool.poetry.source] array item.
# pypiserver = "pyproject.bin.pypiserver:run"
pypiserver = "problems.runner:pypiserver"

# Note that the toml checker for pyproject.toml assumes pyproject.toml is in problems/problems.
# Git should create a symlink for you on cloning.
tomlck = "problems.runner:tomlck"

docs = "problems.runner:docs"

# Describe the scripts above for some (eventual) cool tool to help invoke poetry scripts
[tool.project]
vcs = "ssh://git@github.com/mcarifio/problems.git"
direct = "git+ssh://git@github.com/mcarifio/problems.git" # @sometag#egg=SomeDependency"

[help.tool.poetry.scripts]
"echo.poetry.usage" = "[RUNNER_LOGLEVEL=debug] poetry run problems.runner:echo one two three"
"echo.poetry.usage.help" = "[RUNNER_LOGLEVEL=debug] poetry run problems.runner:echo --help"
"echo.python.usage" = "[RUNNER_LOGLEVEL=debug] python -m problems.runner echo one two three"

"testing.poetry.usage" = "[RUNNER_LOGLEVEL=debug] poetry run problems.runner:testing [--pytestflag[=value]]*"
"testing.poetry.usage.help" = "[RUNNER_LOGLEVEL=debug] poetry run problems.runner:testing --help"
"testing.python.usage" = "[RUNNER_LOGLEVEL=debug] python -m problems.runner testing [--pytestflag[=value]]*"

"tomlck.poetry.usage" = "[RUNNER_LOGLEVEL=debug] poetry run tomlck [--pyproject_toml=path/to/pyproject.toml]"
"toml.python.usage" = {env="RUNNER_LOGLEVEL=debug", invoke="python -m problems.runner", command="tomlck [--pyproject_toml=path/to/pyproject.toml]"}




#[[tool.poetry.source]]
#name = "problems"
#url = "http://localhost:9090"
#username = "problems"
#password = "problems"

# custom values, unused
#directory = "project/build/resources/pypiserver/packages"
#htpasswd = "project/build/resources/pypiserver/htpasswd.txt"
#verbose = 1
#overwrite = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# Custom project meta data, don't know how I'll use it yet
